Implement clustering with a variety of hyper parameters, and analysis of the resulting performance of those models.  Sadly it takes so long I can't actually run this yet.